# velociped

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Dockerfile.tileserver  Dockerfile.tileserver.dockerignore  Dockerfile.varnish  Dockerfile.varnish.dockerignore  Makefile  README.md  build_prod_images.sh  deploy.sh  docker-compose-common.yml  docker-compose-deploy.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  docker-entrypoint.sh  layers.json  mypy.ini  package-lock.json  package.json  profiles.json  pyproject.toml  style.json  tileserver.json  varnish.vcl  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
api/: config.py  database.py  main.py  schemas.py  security.py  utils.py
api/v1/: __init__.py
api/v1/endpoints/: geocoder.py  route.py  tiles.py
api/v1/utils/: __init__.py  route.py
app/: main.py  utils.py
mapproxy/: Dockerfile  docker-entrypoint.sh  main.py  mapproxy.yml
scripts/: format.sh  lint.sh
src/: control.js  geocoder.js  gpx-control.js  index.js  info-control.js  info.html  line.js  profile-control.js  router.js  state.js  style.css  ts-styles.js
templates/: index.html
tileserver/: Dockerfile  bgstyle.json  config.json  style.json
varnish/: Dockerfile  varnish.vcl
