[tool.poetry]
name = "velociped"
version = "0.1.0"
description = ""
authors = ["Joakim Fors <joakim.fors@trivector.se>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
asyncpg = "^0.20.1"
httpx = "^0.12.1"
uvicorn = "^0.11.3"
aiofiles = "^0.5.0"
jinja2 = "^2.11.2"
shapely = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
devtools = {extras = ["pygments"], version = "^0.5.1"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
