[tool.poetry]
name = "velociped"
version = "0.1.0"
description = ""
authors = ["Joakim Fors <joakim.fors@trivector.se>"]
packages = [
  { include = "api" },
]


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
asyncpg = "^0.20.1"
httpx = "0.12.0"
uvicorn = "^0.11.3"
aiofiles = "^0.5.0"
jinja2 = "^2.11.2"
shapely = "^1.7.0"
authlib = "^0.14.2"
databases = {extras = ["postgresql"], version = "^0.3.2"}
itsdangerous = "^1.1.0"
pyproj = "^2.6.1"
tenacity = "^6.2.0"
GDAL = "3.1.4"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
devtools = {extras = ["pygments"], version = "^0.5.1"}
black = "^19.10b0"
autoflake = "^1.3.1"
isort = "^4.3.21"
mypy = "^0.770"

[tool.poetry.scripts]
serve = "api.main:main"

[tool.isort]
line_length = 88
multi_line_output = 3
balanced_wrapping = true
combine_as_imports = true
include_trailing_comma = true
force_grid_wrap = 0

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
